# abbrv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh
include/: dirent.h
include/SDL2/: SDL_revision.h  SDL_ttf.h
lib/: LICENSE-sdl.txt  libSDL2.la  libSDL2_image.la  libSDL2_test.la  libSDL2_ttf.la  libSDL2main.la
src/: .gitignore  abbrv.rc  displace.rc
src/classes/: Debug.cpp  Platform.cpp  Serialization.cpp  fontawesome.cpp  main.cpp  roboto.cpp
src/classes/Core/: Platform.cpp
src/headers/: AppData.hpp  Data.hpp  Debug.hpp  Editor.hpp  Icons.hpp  Input.hpp  Platform.hpp  Platform_Windows.hpp  Serialization.hpp
src/headers/Core/: Platform.hpp
utils/: build_debug.cmd  build_displace_debug.cmd  build_release.cmd.cmd  cmake_build.sh  cmake_build_release.sh  cmake_refresh.cmd  cmake_refresh.sh  launch_exe.cmd  version.sh
utils/autohotkey/: build_debug.ahk  launch_exe.ahk  start_all.ps1
